--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,30 +1,64 @@
-name: Deploy Angular App to GitHub Pages
+name: My GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  # Build job
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'latest'
+          node-version: latest
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build Angular app
-        run: ng build --configuration production --base-href /https://github.com/Luwy-Dyro/Ang20-MyFormsReactive/
+      - name: Build
+        run: npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/https://github.com/Luwy-Dyro/Ang20-MyFormsReactive
+      - name: Deploy to Github pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.LW_TOKEN }}
+        run: |
+          npm run ng -- deploy --repo="https://github.com/Luwy-Dyro/Ang20-MyFormsReactive.git" --base-href=/Ang20-MyFormsReactive/ --name=Luwy-Dyro --email=luwy.dyro@gmail.com
+
+# name: Deploy Angular App to GitHub Pages
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: 'latest'
+
+#       - name: Install dependencies
+#         run: npm install
+
+#       - name: Build Angular app
+#         run: ng build --configuration production --base-href /https://github.com/Luwy-Dyro/Ang20-MyFormsReactive/
+
+#       - name: Deploy to GitHub Pages
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           publish_dir: ./dist/https://github.com/Luwy-Dyro/Ang20-MyFormsReactive
