--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,14 @@
               "src/styles.scss"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "/Ang20-MyFormsReactive/"
+          }
         }
+
       }
     }
   }
